deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kit
spec:
  ports:
    - port: 18789
      targetPort: 18789
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kit
